<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome">

    <Button
        android:id="@+id/playButtonWdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/welcomeWdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <CheckBox
        android:id="@+id/addnCheckBoxWdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/addition_chkbx"
        app:layout_constraintStart_toStartOf="@+id/quizMeOnWdg"
        app:layout_constraintTop_toBottomOf="@+id/quizMeOnWdg" />

    <CheckBox
        android:id="@+id/subtnCheckBoxWdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/subtraction_chkbx"
        app:layout_constraintStart_toStartOf="@+id/addnCheckBoxWdg"
        app:layout_constraintTop_toBottomOf="@+id/addnCheckBoxWdg" />

    <TextView
        android:id="@+id/quizMeOnWdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quiz_me_on_msg"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeWdg" />

</androidx.constraintlayout.widget.ConstraintLayout>